# rfsslam

./: .gitignore  CMakeLists.txt  Doxyfile  License  README  README.md  rfsslam-config.cmake  rfsslam-config.cmake.in  timestamp_1656974796.4145858.csv
cfg/: fastslam2dSim.cfg  fastslam2dSim.xml  fastslam_VictoriaPark.xml  fastslam_VictoriaPark_artificialClutter.xml  mhfastslam2dSim.cfg  mhfastslam2dSim.xml  mhfastslam_VictoriaPark.xml  mhfastslam_VictoriaPark_artificialClutter.xml  rbcbmemberslam2dSim.xml  rblmbslam2dSim.xml  rbphdslam2dSim.cfg  rbphdslam2dSim.xml  rbphdslam6dSim.xml  rbphdslam_VictoriaPark.xml  rbphdslam_VictoriaPark_artificialClutter.xml  rfsceresslam1dSim.xml  rfsceresslam2dSim.xml  rfspsoslam1dSim.xml  rfspsoslam2dSim.xml  simulator1d.cfg  simulator2d.cfg
data/batchSim/: README.md
include/: BruteForceAssignment.hpp  COLA.hpp  CostMatrix.hpp  FastSLAM.hpp  Frame.hpp  GMBernoulliComponent.hpp  GaussianGenerators.hpp  GaussianMixture.hpp  HungarianMethod.hpp  JCBB.hpp  KalmanFilter.hpp  KalmanFilter_RngBrg.hpp  KalmanFilter_RngBrg_amplitude.hpp  KalmanFilter_VictoriaPark.hpp  Landmark.hpp  LandmarkWithDescriptor.hpp  LinearAssignment.hpp  Measurement.hpp  MeasurementModel.hpp  MeasurementModelWithDescriptor.hpp  MeasurementModel_6D.hpp  MeasurementModel_Rng1D.hpp  MeasurementModel_RngBrg.hpp  MeasurementModel_RngBrg_amplitude.hpp  MeasurementModel_VictoriaPark.hpp  MeasurementModel_XY.hpp  MeasurementWithDescriptor.hpp  Measurement_amplitude.hpp  MurtyAlgorithm.hpp  ORB.hpp  OSPA.hpp  Particle.hpp  ParticleFilter.hpp  PermutationLexicographic.hpp  Pose.hpp  Pose6D.hpp  ProcessModel.hpp  ProcessModel_Ackerman2D.hpp  ProcessModel_Odometry1D.hpp  ProcessModel_Odometry2D.hpp  (+19 more)
scripts/: appendLicense.sh  batchSim.bash  gource.sh  plotBatchSimResults.py  runrbphd2dsim.bash
scripts/VictoriaPark/: animate_VictoriaPark.py
scripts/batchSim/: batch1d.py  batch1d_ploterror.py  batch2d.py  batch2d_ploterror.py  batchSim_fastslam.bash  batchSim_mhfastslam.bash  batchSim_rbphdslam.bash  plotBatchSimResults.py
scripts/sim/: animate1dceres.py  animate1dpso.py  animate2dSim.py  animate2dceres.py  animate2dpso.py
src/: BinaryTree.cpp  BinaryTree.hpp  BruteForceAssignment.cpp  CostMatrix.cpp  GaussianGenerators.cpp  GaussianMixture.cpp  GaussianMixture.hpp  HungarianMethod.cpp  KalmanFilter.cpp  KalmanFilter.hpp  KalmanFilter_RngBrg.cpp  KalmanFilter_RngBrg_amplitude.cpp  Landmark.cpp  Landmark.hpp  LinearAssignment.cpp  Measurement.cpp  Measurement.hpp  MeasurementModel.cpp  MeasurementModel.hpp  MeasurementModel_6D.cpp  MeasurementModel_Rng1D.cpp  MeasurementModel_RngBrg.cpp  MeasurementModel_RngBrg_amplitude.cpp  MeasurementModel_VictoriaPark.cpp  MeasurementModel_XY.cpp  MurtyAlgorithm.cpp  Particle.cpp  Particle.hpp  ParticleFilter.hpp  PermutationLexicographic.cpp  Pose.cpp  Pose.hpp  ProcessModel.cpp  ProcessModel.hpp  ProcessModel_Ackerman2D.cpp  ProcessModel_Odometry1D.cpp  ProcessModel_Odometry2D.cpp  ProcessModel_Odometry6D.cpp  RBPHDFilter.cpp  State.hpp  (+27 more)
src/examples/: linearAssignment_CostMatrixPartitioning.cpp  linearAssignment_LexicographicOrdering.cpp  linearAssignment_MurtyAlgorithm.cpp  orbTest.cpp  ospaError.cpp  ospaErrorFromFile.cpp
src/python_script/: README.md  asdasd.py  csv_list_generator.py  graph_generator_pose.py  main_script.py
src/python_script/classes/: class_calibr.py  frames_class.py  realt_class.py
src/python_script/config/: calibr_dict.py  camera_calibration_params.JSON  cfg_parameters copy.yaml  cfg_parameters.yaml
src/python_script/utils/: calibr_functions.py  feat_functions.py  misc_tools.py  ssc.py  vid_process_tools.py
src/tests/: jcbb_test.cpp  spatialIndexTreeTest.cpp
test/: GaussianMixtureTest.hpp  KalmanFilterTest.hpp  LandmarkTest.hpp  LinearAssignmentTest.hpp  MeasurementModelTest.hpp  MeasurementTest.hpp  ParticleFilterTest.hpp  PoseTest.hpp  ProcessModelTest.hpp  RBPHDFilterTest.hpp  SpatialIndexTreeTest.hpp  test.cpp
tools/VictoriaPark/: DataConvert_Matlab_to_ASCII.m  detectFeatures.m
tools/matlab/: aa2Rmat.m  deadReckoning.m  deadReckoningSim1d.m  drawGaussianMixture.m  drawPHDFilterProcess.m  fastSlamSim1d.m  fastSlamSimPlot1d.m  generate1dFalseAlarms.m  generate1dFeatures.m  generate1dMeasurements.m  generate1dMissedDetections.m  generate1dOdometry.m  generate1dTrajectory.m  generateCircleTrajectory.m  generateMeasurements.m  generateOdometry.m  generateTrajectory.m  inverseMeasureModel.m  inverseMeasureUncertainty.m  mapErrorCPP2dSim.m  measureModel.m  motionModel.m  motionSim.m  multiFeatureLikelihood.m  phdFilterSim.m  phdFilterSim1d.m  phdFilterSim1dAnimate.m  phdFilterSimPlot.m  phdFilterSimPlot1d.m  phdFilterSimPlot1dBatch.m  phdFilterSimSetup.m  phdFilterSimSetup1d.m  phdFilterWeightingSim.m  playCPP1dSimData.m  playCPP2dSimData.m  readAndPlayCPP2dSimData.m  readCPP1dSimData.m  readCPP2dSimData.m  velocities2Displacement.m  weightingAnalysis.m  (+1 more)
tools/matlab/results/Animations/: MakeVideo  convertimages
tools/matlab/results/ICCAIS2013/: phdFilterSimPlot1dBatch.m
