# Keith Leung 2013

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_BUILD_TYPE Debug)
#CMAKE_BUILD_TYPE(CMAKE_CXX_FLAGS_RELEASE)
PROJECT(RB_PHD_FILTER)

FILE(MAKE_DIRECTORY "bin")
FILE(MAKE_DIRECTORY "lib")

FIND_PACKAGE(Eigen REQUIRED)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./bin)
MESSAGE("CMAKE_RUNTIME_OUTPUT_DIRECTORY = " ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ./lib)
MESSAGE("CMAKE_ARCHIVE_OUTPUT_DIRECTORY = " ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})

#ADD_SUBDIRECTORY()
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(src)
INCLUDE_DIRECTORIES(${Eigen_INCLUDE_DIRS})
#LINK_DIRECTORIES()

ADD_LIBRARY(Pose src/Pose.cpp)
ADD_LIBRARY(ProcessModel src/ProcessModel.cpp)
ADD_LIBRARY(Landmark src/Landmark.cpp)
ADD_LIBRARY(Measurement src/Measurement.cpp)
ADD_LIBRARY(MeasurementModel src/MeasurementModel.cpp)




ADD_LIBRARY(Particle src/Particle.hpp)
SET_TARGET_PROPERTIES(Particle PROPERTIES LINKER_LANGUAGE CXX)

ADD_LIBRARY(ParticleFilter src/ParticleFilter.hpp)
SET_TARGET_PROPERTIES(ParticleFilter PROPERTIES LINKER_LANGUAGE CXX)

ADD_LIBRARY(BinaryTree src/BinaryTree.cpp)

ADD_EXECUTABLE(test src/test.cpp)
TARGET_LINK_LIBRARIES(test Pose Particle ProcessModel Landmark Measurement MeasurementModel)
